--- a/chau/index.html
+++ b/chau/index.html
@@ -59,7 +59,7 @@
     </div>
     <ul class="collapsible" data-collapsible="accordion">
       <li>
-        <div class="collapsible-header"><i class="material-icons">insert_chart</i>Statistics</div>
+        <div class="collapsible-header active"><i class="material-icons">insert_chart</i>Statistics</div>
         <div class="collapsible-body">
           <div id="detailed-statistics">
             <div class="row">
