typo, final css changes for now

--- a/chau/index.html
+++ b/chau/index.html
@@ -211,7 +211,7 @@
                 <div class="col s12 m2">
                   <div class="card-panel">
                     <li id="light-bump-front-right" class="statistic">
-                      <h6 class='statistic-header'>&nbsp;LB Ft. Right</h6>
+                      <h6 class='statistic-header'>&nbsp;LB Ft Right</h6>
                       <span id="light-bump-front-right-data" class='light-bump'></span>
                     </li>
                   </div>
