--- a/chau/index.html
+++ b/chau/index.html
@@ -304,7 +304,7 @@ https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
       var totalHeight = document.getElementById("path_layer").height;
       //c.style = "background-color:red";
       var ctx=c.getContext("2d");
-      var pastHeight = totalHeight/2;
+      var pastHeight = totalHeight * (4/5);
       var pastWidth = totalWidth/2;
       var oldDistance = 0;
      /* ctx.beginPath();
@@ -348,8 +348,10 @@ https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
           ctx.moveTo(pastWidth,pastHeight);
           console.log(call.angle);
 
-          var newX = pastWidth + Math.cos(parseInt(call.angle)) * call.distance;
-          var newY = pastHeight + Math.sin(parseInt(call.angle)) * call.distance;
+          var ourAngle = call.angle * (Math.PI / 180);
+
+          var newX = pastWidth + Math.cos(ourAngle) * call.distance;
+          var newY = pastHeight + Math.sin(ourAngle) * call.distance;
 
           console.log(newX);
           console.log(newY);
